# heb-challenge

./: .gitignore  CHANGELOG.md  Makefile  README.md  config.dhall  db.sql  heb-challenge.cabal
src/: Config.hs  Db.hs  Detection.hs  Main.hs  Model.hs
